fix misalignment of modified dates, shift to right

--- a/apps/files/css/files.css
+++ b/apps/files/css/files.css
@@ -176,6 +176,7 @@ table td.filename .nametext, .uploadtext, .modified { float:left; padding:14px 0
 }
 .modified {
 	position: relative;
+	padding-left: 8px;
 	overflow: hidden;
 	text-overflow: ellipsis;
 	width: 90%;
